force-app/main/default/objects/AmazonDynamoDBInfo__c/AmazonDynamoDBInfo__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Amazon DynamoDB Information</description>
    <label>Amazon DynamoDB Info</label>
</CustomObject>