force-app/main/default/objects/AmazonDynamoDBInfo__c/fields/apiKey__c.field-meta.xml
<CustomField>
    <fullName>apiKey__c</fullName>
    <description>Amazon AWS Identity and Access Management User API Key</description>
    <inlineHelpText>Amazon AWS Identity and Access Management User API Key</inlineHelpText>
    <label>API Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>