force-app/main/default/objects/AmazonDynamoDBInfo__c/fields/apiSecret__c.field-meta.xml
<CustomField>
    <fullName>apiSecret__c</fullName>
    <description>The API Secret from the Identity Access Management User that has Amazon DynamoDB</description>
    <inlineHelpText>The API Secret from the Identity Access Management User that has Amazon DynamoDB</inlineHelpText>
    <label>API Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>