force-app/main/default/objects/AmazonDynamoDBInfo__c/fields/EndpointUrl__c.field-meta.xml
<CustomField>
    <fullName>EndpointUrl__c</fullName>
    <defaultValue>"https://dynamodb.us-east-1.amazonaws.com/"</defaultValue>
    <description>The Endpoint URL of the DynamoDBService</description>
    <inlineHelpText>The Endpoint URL of the DynamoDBService</inlineHelpText>
    <label>EndPoint URL</label>
    <type>Url</type>
</CustomField>