force-app/main/default/objects/AmazonDynamoDBInfo__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <defaultValue>"us-east-1"</defaultValue>
    <description>The Region the DynamoDB is located in.</description>
    <inlineHelpText>The Region the DynamoDB is located in.</inlineHelpText>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>